components/calendar: use QPluginLoader::unload to unload library

which is recommended by the document, though I can't see the difference.

BUG: 477165
FIXED-IN: 6.0